--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 <body>
     <h1> Python Challenge (Pybank & PyPoll) </h1>
 
-    <p> In this challenge, you are tasked with creating a Python script for analyzing
-      the financial records of your company. You will give a set of financial data called
-      budget_data.csv. The dataset is composed of two columns: Date and Profit/Losses.
-      (Thankfully, your company has rather lax standards for accounting so the records are simple.)
+    <p> In this challenge, we were tasked with creating a Python script for analyzing
+      the financial records of a company. Given was a budget_data.csv file.
+      The task was to create a Python script that analyzes the records to calculate
+      the data to show each of the following:
     </p>
+    <br>
+    <img src="PyBank/financial_analysis.png" alt="Financial Analysis" height="35%" width="35%">
 
-    
+
 </body>
 
 </html>
